Streamlined data loading, different image in io_data

--- a/classifier_benchmark.ipynb
+++ b/classifier_benchmark.ipynb
@@ -50,6 +50,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initializeAdata():\n",
+    "    adata = loadSpatialDataset(single_gene_images_glob = \"/media/gambino/students_workdir/nynke/blurry_model/ileum_data/mouse_ileum/coordinate_parsed/*.tif\", adata_to_concat=\"blurry\")\n",
+    "    # removing the biological real data from the similated data\n",
+    "    adata_bio = adata\n",
+    "    adata = adata[adata.obs['pattern']!='spatial']\n",
+    "    adata.obs.reset_index(drop=True, inplace=True)\n",
+    "    img_paths = adata.obs[\"original_image_paths\"]\n",
+    "    cell_ids = [re.findall('icell(\\d+)', img_path)[0] for img_path in img_paths]\n",
+    "    adata.obs['cell_id'] = cell_ids\n",
+    "    return adata, adata_bio"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
