done with new data prep, time for stats!

--- a/classifier_benchmark.ipynb
+++ b/classifier_benchmark.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read_h5ad(\"/media/gambino/students_workdir/nynke/data/all_spots_simulated_embeddings_adata.h5ad\")\n"
+    "adata = sc.read_h5ad(\"/media/gambino/students_workdir/nynke/data/all_spots_simulated_embeddings_adata.h5ad\")"
    ]
   },
   {
@@ -169,6 +169,13 @@
    ],
    "source": [
     "adata = loadSpatialDataset(single_gene_images_glob = \"/media/gambino/students_workdir/nynke/blurry_model/ileum_data/mouse_ileum/coordinate_parsed/*.tif\", adata_to_concat=\"blurry\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dealing with cell_id and spatial data"
    ]
   },
   {
@@ -1325,6 +1332,40 @@
    "metadata": {},
    "source": [
     "### Split in train val test - Without splitting per cell_id."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use a 80-10-10 split\n",
+    "def train_val_test(adata, seed: str = seed, split_per_cellID: bool = True):\n",
+    "    all_indices = adata.obs.index\n",
+    "\n",
+    "    if split_per_cellID == True:\n",
+    "        cell_ids = np.array(adata.obs['cell_id'])\n",
+    "        unique_cell_ids, cell_id_indices = np.unique(cell_ids, return_inverse=True)\n",
+    "\n",
+    "        # Perform train-val-test split on cell_ids, maintaining the grouping\n",
+    "        train_indices, test_val_indices = skm.train_test_split(np.arange(len(unique_cell_ids)), test_size=0.2, random_state=seed)\n",
+    "        val_indices, test_indices = skm.train_test_split(test_val_indices, test_size=0.5, random_state=seed)\n",
+    "\n",
+    "        # Map the grouped indices back to the original indices\n",
+    "        train_indices = np.concatenate([np.where(cell_id_indices == i)[0] for i in train_indices])\n",
+    "        val_indices = np.concatenate([np.where(cell_id_indices == i)[0] for i in val_indices])\n",
+    "        test_indices = np.concatenate([np.where(cell_id_indices == i)[0] for i in test_indices])\n",
+    "    else:\n",
+    "        train_indices, test_val_indices = skm.train_test_split(all_indices, test_size=0.2, random_state=seed)\n",
+    "        val_indices, test_indices = skm.train_test_split(test_val_indices, test_size=0.5, random_state=seed)\n",
+    "\n",
+    "    # Subset AnnData object using the obtained indices\n",
+    "    adata_train = adata[train_indices, :]\n",
+    "    adata_val = adata[val_indices, :]\n",
+    "    adata_test = adata[test_indices, :]\n",
+    "\n",
+    "    return adata_train, adata_val, adata_test"
    ]
   },
   {
