commit before power outage

--- a/colocalization.ipynb
+++ b/colocalization.ipynb
@@ -34,7 +34,8 @@
     "from sklearn import metrics, linear_model\n",
     "import random\n",
     "from tqdm import tqdm\n",
-    "import re"
+    "import re\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -47,7 +48,9 @@
     "random.seed(seed)\n",
     "np.random.seed(seed)\n",
     "torch.manual_seed(seed)\n",
-    "rng = np.random.RandomState(seed)"
+    "rng = np.random.RandomState(seed)\n",
+    "\n",
+    "sns.set_theme()"
    ]
   },
   {
@@ -198,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +241,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_split_cellID = sc.read_h5ad(\"/media/gambino/students_workdir/nynke/new_model_with_cell_id_left_out_custom_nynke_panel_simulated_embeddings_adata.h5ad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add an extra column to the adata.obs dataframe that contains the pattern strength, given that protrusion has different pattern strength levels than the other patterns.\n",
+    "choices = ['strong', 'intermediate', 'low']\n",
+    "for adata in [adata_split_cellID]:#, adata_mixed_cellID adata_all_spots]:\n",
+    "    conditions = [\n",
+    "        (adata.obs['prop'] == 0.9) | ((adata.obs['prop'] == 0.4) & (adata.obs['pattern'] == 'protrusion')),\n",
+    "        (adata.obs['prop'] == 0.5) | ((adata.obs['prop'] == 0.2) & (adata.obs['pattern'] == 'protrusion')),\n",
+    "        (adata.obs['prop'] == 0.1) | ((adata.obs['prop'] == 0.0) & (adata.obs['pattern'] == 'protrusion'))\n",
+    "    ]\n",
+    "\n",
+    "    adata.obs['pattern_strength'] = np.select(conditions, choices, default='unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -257,6 +287,16 @@
    "source": [
     "calcUmap(adata)\n",
     "plotUmap(adata, \"n_spots\", \"./test_spot_count.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calcUmap(adata_split_cellID)\n",
+    "plotUmap(adata_split_cellID, color=\"pattern_strength\", title=\"UMAP coloured by Pattern Strength\", out_file=\"/media/gambino/students_workdir/nynke/blurry/images/umap_pattern_strength.png\")"
    ]
   },
   {
