finished latent space statistics

--- a/powerAnalysis.ipynb
+++ b/powerAnalysis.ipynb
@@ -18,8 +18,10 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "# when debugging the python scripts, with the autoreload the jupyter notebook sync's to the most up to date scripts. See: https://ipython.org/ipython-doc/3/config/extensions/autoreload.html\n",
+    "\n",
     "import torch\n",
     "import numpy as np\n",
+    "from latent_statistics import permutation_test\n",
     "from multiprocessing import Pool\n",
     "import scanpy as sc\n",
     "from scipy.stats import ks_2samp\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +60,7 @@
        "'blurry'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,42 +108,6 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Add an extra column to the adata.obs dataframe that contains the pattern strength, given that protrusion has different pattern strength levels than the other patterns.\n",
-    "choices = ['strong', 'intermediate', 'low']\n",
-    "for adata in [adata_split_cellID]:#, adata_mixed_cellID adata_all_spots]:\n",
-    "    conditions = [\n",
-    "        (adata.obs['prop'] == 0.9) | ((adata.obs['prop'] == 0.4) & (adata.obs['pattern'] == 'protrusion')),\n",
-    "        (adata.obs['prop'] == 0.5) | ((adata.obs['prop'] == 0.2) & (adata.obs['pattern'] == 'protrusion')),\n",
-    "        (adata.obs['prop'] == 0.1) | ((adata.obs['prop'] == 0.0) & (adata.obs['pattern'] == 'protrusion'))\n",
-    "    ]\n",
-    "\n",
-    "    adata.obs['pattern_strength'] = np.select(conditions, choices, default='unknown')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_test = adata_split_cellID[adata_split_cellID.obs['cell_id'].isin(adata_split_cellID.uns['test_cellIDs'])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-7-93478e804234>:15: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "  adata_test.obs['rna_count'] = adata_test.obs['n_spots_interval'].apply(map_interval)\n"
-     ]
-    }
-   ],
    "source": [
     "def map_interval(interval):\n",
     "    if interval == '0-10':\n",
@@ -156,13 +122,36 @@
     "        return '100+'\n",
     "    else:\n",
     "        return None\n",
+    "    \n",
+    "def initialize_adata(adata):\n",
+    "    choices = ['strong', 'intermediate', 'low']\n",
+    "    conditions = [\n",
+    "        (adata.obs['prop'] == 0.9) | ((adata.obs['prop'] == 0.4) & (adata.obs['pattern'] == 'protrusion')),\n",
+    "        (adata.obs['prop'] == 0.5) | ((adata.obs['prop'] == 0.2) & (adata.obs['pattern'] == 'protrusion')),\n",
+    "        (adata.obs['prop'] == 0.1) | ((adata.obs['prop'] == 0.0) & (adata.obs['pattern'] == 'protrusion'))\n",
+    "    ]\n",
+    "    adata.obs['pattern_strength'] = np.select(conditions, choices, default='unknown')\n",
     "\n",
-    "adata_test.obs['rna_count'] = adata_test.obs['n_spots_interval'].apply(map_interval)"
+    "    # Include modified RNA count intervals in the adata object\n",
+    "    adata.obs['rna_count'] = adata.obs['n_spots_interval'].apply(map_interval)\n",
+    "\n",
+    "\n",
+    "    return adata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_split_cellID = initialize_adata(adata_split_cellID)\n",
+    "adata_test = adata_split_cellID[adata_split_cellID.obs['cell_id'].isin(adata_split_cellID.uns['test_cellIDs'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_power(params):\n",
+    "def compute_power_rf(params):\n",
     "    try:\n",
     "        strength, count, sample = params\n",
     "        significant_count = 0\n",
@@ -319,6 +308,41 @@
     "            control_score = rf_pattern_balanced_singlejob.predict_proba(control.obsm[\"latent\"])[:,1]\n",
     "\n",
     "            statistic, pvalue = ks_2samp(pattern_score, control_score)\n",
+    "            critical_value = 0.05\n",
+    "            if pvalue < critical_value:\n",
+    "                significant_count += 1\n",
+    "        return (f'{strength}_{count}_{sample}', significant_count/1000)\n",
+    "    except ValueError as e:\n",
+    "        if str(e) == \"Cannot take a larger sample than population when 'replace=False'\":\n",
+    "            print(f\"Error for parameters: {params}\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_power_permutation(params):\n",
+    "    try:\n",
+    "        strength, count, sample = params\n",
+    "        significant_count = 0\n",
+    "        # Given that random patterns have only 1442 cells simulated, we don't calculate the power for these above 1400 so that we don't need to sample with replacement\n",
+    "        if count == '0-10' and sample > 1400:\n",
+    "            return (f'{strength}_{count}_{sample}', -1)\n",
+    "        if count == '10-30' and sample > 5100:\n",
+    "            return (f'{strength}_{count}_{sample}', -1)\n",
+    "        for i in range(1000):\n",
+    "            # sample new gene. No random seed so that every time a different \"gene\" is sampled.\n",
+    "            pattern = subset_power_analysis(adata_test, mixed_patterns = True, pattern_strength= strength, rna_count = count, sample_size = sample)\n",
+    "            control = subset_power_analysis(adata_test, pattern = 'random', mixed_patterns = False, rna_count = count, sample_size = sample)\n",
+    "\n",
+    "            # Calculate null distribution and pvalue\n",
+    "            pvalue, observed_statistic, permuted_statistics = permutation_test(pattern.obsm[\"latent\"], control.obsm[\"latent\"], n_permutations=1000)\n",
+    "            \n",
     "            critical_value = 0.05\n",
     "            if pvalue < critical_value:\n",
     "                significant_count += 1\n",
@@ -392,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +429,7 @@
     "\n",
     "# Create a multiprocessing pool and compute the power for each combination\n",
     "with Pool(45) as p:\n",
-    "    results = p.map(compute_power, combinations)\n",
+    "    results = p.map(compute_power_permutation, combinations)\n",
     "\n",
     "# Convert the results to a dictionary\n",
     "power_results = dict(results)"
@@ -420,11 +444,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = f\"temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl\"\n",
+    "path = f\"temp_objects/power_analysis_permutationLatent_to7000_logscale_uncorrected.pkl\"\n",
     "\n",
     "# Open the file in write-binary mode and dump the object\n",
     "with open(path, 'wb') as f:\n",
