finished apical basal, updated chamfer to gpu

--- a/powerAnalysis.ipynb
+++ b/powerAnalysis.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/gambino/students_workdir/nynke/miniconda3/envs/blurry/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
+    "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "# when debugging the python scripts, with the autoreload the jupyter notebook sync's to the most up to date scripts. See: https://ipython.org/ipython-doc/3/config/extensions/autoreload.html\n",
     "\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +51,7 @@
        "'blurry'"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +204,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observed chamfer distance: 115.97711181640625\n",
+      "P-value: 0.01984126984126984\n"
+     ]
+    }
+   ],
+   "source": [
+    "strength = 'strong'\n",
+    "count = '10-30'\n",
+    "sample = 5\n",
+    "\n",
+    "pattern = subset_power_analysis(adata_test, mixed_patterns = True, pattern_strength= strength, rna_count = count, sample_size = sample)\n",
+    "control = subset_power_analysis(adata_test, pattern = 'random', mixed_patterns = False, rna_count = count, sample_size = sample)\n",
+    "\n",
+    "p_value, observed_statistic, permuted_statistics = permutation_test(\n",
+    "    pattern.obsm['latent'], \n",
+    "    control.obsm['latent'], \n",
+    "    n_permutations=9999)\n",
+    "\n",
+    "print(f\"Observed chamfer distance: {observed_statistic}\")\n",
+    "print(f\"P-value: {p_value}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -221,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +363,7 @@
     "            control = subset_power_analysis(adata_test, pattern = 'random', mixed_patterns = False, rna_count = count, sample_size = sample)\n",
     "\n",
     "            # Calculate null distribution and pvalue\n",
-    "            pvalue, observed_statistic, permuted_statistics = permutation_test(pattern.obsm[\"latent\"], control.obsm[\"latent\"], n_permutations=1000)\n",
+    "            pvalue, observed_statistic, permuted_statistics = permutation_test(pattern.obsm[\"latent\"], control.obsm[\"latent\"], n_permutations=9999)\n",
     "            \n",
     "            critical_value = 0.05\n",
     "            if pvalue < critical_value:\n",
@@ -364,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -420,12 +442,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import multiprocessing as mp\n",
+    "\n",
     "strengths = ['strong', 'intermediate', 'low']\n",
     "counts = adata_test.obs['rna_count'].unique()\n",
     "samples = [5, 9, 15, 27, 46, 81, 142, 247, 432, 753, 1315, 2297, 4009, 7000]\n",
     "\n",
     "# Create a list of all combinations of strength, count, and sample\n",
     "combinations = [(strength, count, sample) for strength in strengths for count in counts for sample in samples]\n",
+    "\n",
+    "# Set the start method to 'spawn'\n",
+    "mp.set_start_method('spawn', force=True)\n",
     "\n",
     "# Create a multiprocessing pool and compute the power for each combination\n",
     "with Pool(45) as p:\n",
