newest power results

--- a/power_permutation_refactored.ipynb
+++ b/power_permutation_refactored.ipynb
@@ -462,6 +462,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('strong', '0-10', 1315), ('strong', '0-10', 2297), ('strong', '0-10', 4009), ('strong', '10-30', 1315), ('strong', '10-30', 2297), ('strong', '10-30', 4009), ('strong', '30-60', 1315), ('strong', '30-60', 2297), ('strong', '30-60', 4009), ('strong', '60-100', 1315), ('strong', '60-100', 2297), ('strong', '60-100', 4009), ('strong', '100+', 1315), ('strong', '100+', 2297), ('strong', '100+', 4009), ('intermediate', '0-10', 1315), ('intermediate', '0-10', 2297), ('intermediate', '0-10', 4009), ('intermediate', '10-30', 1315), ('intermediate', '10-30', 2297), ('intermediate', '10-30', 4009), ('intermediate', '30-60', 1315), ('intermediate', '30-60', 2297), ('intermediate', '30-60', 4009), ('intermediate', '60-100', 1315), ('intermediate', '60-100', 2297), ('intermediate', '60-100', 4009), ('intermediate', '100+', 1315), ('intermediate', '100+', 2297), ('intermediate', '100+', 4009), ('low', '0-10', 1315), ('low', '0-10', 2297), ('low', '0-10', 4009), ('low', '10-30', 1315), ('low', '10-30', 2297), ('low', '10-30', 4009), ('low', '30-60', 1315), ('low', '30-60', 2297), ('low', '30-60', 4009), ('low', '60-100', 1315), ('low', '60-100', 2297), ('low', '60-100', 4009), ('low', '100+', 1315), ('low', '100+', 2297), ('low', '100+', 4009)]\n",
+      "[('strong', '0-10', 1315), ('strong', '0-10', 2297), ('strong', '0-10', 4009), ('strong', '10-30', 1315), ('strong', '10-30', 2297), ('strong', '10-30', 4009), ('strong', '30-60', 1315), ('strong', '30-60', 2297), ('strong', '30-60', 4009), ('strong', '60-100', 1315), ('strong', '60-100', 2297), ('strong', '60-100', 4009), ('strong', '100+', 1315), ('strong', '100+', 2297), ('strong', '100+', 4009), ('intermediate', '0-10', 1315), ('intermediate', '0-10', 2297), ('intermediate', '0-10', 4009), ('intermediate', '10-30', 1315), ('intermediate', '10-30', 2297), ('intermediate', '10-30', 4009), ('intermediate', '30-60', 1315), ('intermediate', '30-60', 2297), ('intermediate', '30-60', 4009), ('intermediate', '60-100', 1315), ('intermediate', '60-100', 2297), ('intermediate', '60-100', 4009), ('intermediate', '100+', 1315), ('intermediate', '100+', 2297), ('intermediate', '100+', 4009), ('low', '0-10', 1315), ('low', '0-10', 2297), ('low', '0-10', 4009), ('low', '10-30', 1315), ('low', '10-30', 2297), ('low', '10-30', 4009), ('low', '30-60', 1315), ('low', '30-60', 2297), ('low', '30-60', 4009), ('low', '60-100', 1315), ('low', '60-100', 2297), ('low', '60-100', 4009), ('low', '100+', 1315), ('low', '100+', 2297), ('low', '100+', 4009), ('low', '0-10', 753)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "strengths = ['strong', 'intermediate', 'low']\n",
+    "counts = ['0-10', '10-30', '30-60', '60-100','100+']\n",
+    "#samples = [5, 9, 15, 27, 46, 81, 142, 247, 432, 753, 1315, 2297, 4009, 7000]\n",
+    "samples = [1315, 2297, 4009] # , 7000]\n",
+    "\n",
+    "# Create a list of all combinations of strength, count, and sample\n",
+    "combinations = [(strength, count, sample) for strength in strengths for count in counts for sample in samples]\n",
+    "print(combinations)\n",
+    "combinations.append(('low', '0-10', 753))\n",
+    "print(combinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
