--- a/archived/classifier_f1_negative.ipynb
+++ b/archived/classifier_f1_negative.ipynb
@@ -775,6 +775,12 @@
     }
    ],
    "source": [
+    "rf_classifier = RandomForestClassifier(n_estimators=150, random_state=seed, max_features=3, bootstrap=True, oob_score=False)\n",
+    "rf_classifier.fit(adata_train_pattern.obsm[\"latent\"], adata_train_pattern.obs[\"pattern\"])\n",
+    "\n",
+    "#predict label\n",
+    "test_pred = rf_classifier.predict(adata_test_pattern.obsm[\"latent\"])\n",
+    "\n",
     "test_f1_macro = f1_score(adata_test_pattern.obs[\"pattern\"], test_pred, average='macro')\n",
     "test_f1_micro = f1_score(adata_test_pattern.obs[\"pattern\"], test_pred, average='micro')\n",
     "test_f1_per_class = f1_score(adata_test_pattern.obs[\"pattern\"], test_pred, average=None)\n",
